--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -170,6 +170,10 @@ body {
   line-height: 26px;
 }
 
+button.checked::before {
+  content: "\2713"; /* Unicode character for checkmark */
+  margin-right: 5px;
+}
 a {
   text-decoration: none;
 }
