--- a/templates/destination/lombok/lombok.html
+++ b/templates/destination/lombok/lombok.html
@@ -244,9 +244,9 @@
 
       <main>
          <!-- about breadcrumb area start -->
-            <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="/static/assets/img/destination/sulawesi/londa.png">
-               <div class="breadcrumb__bg-overlay m-img"></div>
-               <div class="breadcrumb-shape  d-none d-lg-block">
+         <section class="breadcrumb__area breadcrumb-style pt-130 pb-115 p-relative z-index-1" data-background="/static/assets/img/breadcrumb/breadcrumb-bg-1.jpg">
+            <div class="breadcrumb__bg-overlay m-img"></div>
+                  <div class="breadcrumb-shape d-none d-lg-block">
                <div class="shape-1">
                   <img src="/static/assets/img/breadcrumb/breadcrumb-shape.png" alt="">
                </div>
@@ -254,75 +254,102 @@
                   <img src="/static/assets/img/breadcrumb/breadcrumb-shape-2.png" alt="">
                </div>
             </div>
-               <div class="container">
-                  <div class="row justify-content-center">
-                     <div class="col-xl-10">
-                        <div class="breadcrumb__content text-center">
-                           <h3 class="breadcrumb__title">Londa</h3>
-                           <div class="breadcrumb__list breadcrumb__list-translate">
-                              <span><a href="/">Home</a></span>
-                              <span class="dvdr"><i class="fa-sharp fa-regular fa-minus"></i></span>
-                              <span>Londa</span>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </section>
-         <!-- about breadcrumb area end -->
-
-         <!-- project details area start -->
-            <section class="tp-project-details-area pt-120 pb-90">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-lg-12 wow fadeInUp" data-wow-duration="1s"
-                     data-wow-delay=".3s">
-                        <div class="tp-project-details-thumb-1 mb-35">
-                           <img src="/static/assets/img/destination/sulawesi/londa.png" alt="">
-                        </div>
-                     </div>
-                  </div>
-                  <div class="row">
-                     <div class="col-lg-8">
-                        <div class="tp-project-details-text mb-50">
-                           <h3 class="tp-project-details-title">Londa</h3>
-                            <p>Londa is another Torajan burial ground, though there are actually two funeral sites at Londa. It is similar to both Lemo and Ke’te Kesu. The first site has cliff burials, where tombs have been dug out of the cliff face. The second site has two caves where corpses are buried.</p>
-                            <p>If you want to enter the caves you can do. Be warned there are bones everywhere and it is a bit creepy. You need a light to visit the caves. You can rent a gas lantern if you want, but you can also just use the light on your phone. Most tourists visit Londa as part of an organised Tana Toraja day tour from Rantepao.</p>
-                        </div>
-                     </div>
-                     <div class="col-lg-4">
-                        <div class="tp-project-details-list">
-                           <ul>
-                              <li><span>Destination</span> Londa</li>
-                              <li><span>Photo</span> discoveryyourindonesia.com</li>
-                              <li><span>Date</span> 10 July 2013</li>
-                              <li><span>Location</span> Sulawesi</li>
-                           </ul>
-                        </div>
-                     </div>
-                  </div>
-                  
-               </div>
-            </section>
-         <!-- project details area end -->
-         <section class="tp-contact-input pt-100">
             <div class="container">
-               
-               </div>
-         </section>
-      <!-- Place map area start -->
-      <div class="tp-contact-map-area">
-         <div class="container-fluid g-0">
-            <div class="row gx-0">
-               <div class="col-lg-12">
-                  <div class="tp-contact-map">
-                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31874.1611715834!2d119.86304596735424!3d-3.0219442091491207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d93ebde9ac5d2cb%3A0xa166bdac16b3ed53!2sLonda%20Ancient%20Graveyard!5e0!3m2!1sid!2sid!4v1680713885167!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+               <div class="row justify-content-center">
+                  <div class="col-xl-10">
+                     <div class="breadcrumb__content text-center">
+                        <h3 class="breadcrumb__title">Lombok Destination</h3>
+                        <div class="breadcrumb__list breadcrumb__list-translate">
+                           <span><a href="/">Home</a></span>
+                           <span class="dvdr"><i class="fa-sharp fa-regular fa-minus"></i></span>
+                           <span>Lombok Destination</span>
+                        </div>
+                     </div>
                   </div>
                </div>
             </div>
+         </section>
+         <!-- about breadcrumb area end -->
+         
+         <!-- our service area start -->
+         <section class="tp-service-breadcrumb-area fix pt-120 pb-90 p-relative">
+            <div class="tp-service-breadcrumb-shape d-none d-lg-block">
+               <img class="shape-1" src="/static/assets/img/services/service-details/bubble-1.png" alt="">
+               <img class="shape-2" src="/static/assets/img/services/service-details/bubble-2.png" alt="">
+            </div>
+            <div class="container">
+               <div class="row">
+                  <div class="col-xl-3 col-lg-4 col-md-6">
+                     <div class="tp-service-2-item p-relative mb-30 wow fadeInUp" data-wow-duration="1s"
+                     data-wow-delay=".3s">
+                        <div class="item-2-shape">
+                           <img src="/static/assets/img/services/home-2/shape.png" alt="">
+                        </div>
+                        <div class="tp-service-2-thumb text-center">
+                           <img src="/static/assets/img/destination/lombok/mount_rinjani.png" alt="">
+                        </div>
+                       <div class="tp-service-2-inner">
+                        <h4 class="tp-service-title"><a href="/destination/lombok/mount_rinjani">Mount Rinjani</a></h4>
+                        <p>Mount Rinjani trekking opens from April </p>
+                        <div class="tp-service-2-btn">
+                           <a href="/destination/lombok/mount_rinjani">Details <i class="fa-regular fa-arrow-right-long"></i></a>
+                        </div>
+                       </div>
+                     </div>
+                  </div>
+                  <div class="col-xl-3 col-lg-4 col-md-6">
+                     <div class="tp-service-2-item p-relative mb-30 wow fadeInUp" data-wow-duration="1s"
+                     data-wow-delay=".4s">
+                        <div class="item-2-shape">
+                           <img src="/static/assets/img/services/home-2/shape.png" alt="">
+                        </div>
+                        <div class="tp-service-2-thumb text-center">
+                           <img src="/static/assets/img/destination/lombok/pergasingan_hill.png" alt="">
+                        </div>
+                       <div class="tp-service-2-inner">
+                        <h4 class="tp-service-title"><a href="/destination/lombok/pergasingan_hill">Pergasingan Hill</a></h4>
+                        <p>Pergasingan Hill is an epic</p>
+                        <div class="tp-service-2-btn">
+                           <a href="/destination/lombok/pergasingan_hill">Details <i class="fa-regular fa-arrow-right-long"></i></a>
+                        </div>
+                       </div>
+                     </div>
+                  </div>
+                  <div class="col-xl-3 col-lg-4 col-md-6">
+                     <div class="tp-service-2-item p-relative mb-30 wow fadeInUp" data-wow-duration="1s"
+                     data-wow-delay=".5s">
+                        <div class="item-2-shape">
+                           <img src="/static/assets/img/services/home-2/shape.png" alt="">
+                        </div>
+                        <div class="tp-service-2-thumb text-center">
+                           <img src="/static/assets/img/destination/lombok/sendang_gile_waterfall.png" alt="">
+                        </div>
+                       <div class="tp-service-2-inner">
+                        <h4 class="tp-service-title"><a href="/destination/sendang_gile_waterfall">Sendang Gile Waterfall</a></h4>
+                        <p>Sendang Gile Waterfall is a stunning</p>
+                        <div class="tp-service-2-btn">
+                           <a href="/destination/lombok/sendang_gile_waterfall">Details <i class="fa-regular fa-arrow-right-long"></i></a>
+                        </div>
+                       </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <!-- our service area end -->
+
+         {% if login %}
+         <!-- Create Posting -->
+         <div class="row">
+            <div class="col-xl-12">
+               <div class="tp-service-all-btn text-center mt-60">
+                  <a class="tp-btn" href="/create_posting">Create Posting <i class="fa-regular fa-arrow-right-long"></i></a>
+               </div>
+            </div>
          </div>
-      </div>
-<!-- Place map area end -->
+         <!-- Create Posting End-->
+         {% endif %}
+         
       </main>
 
       <!-- footer area start -->
@@ -414,28 +441,27 @@
    <!-- footer area end -->
 
 
-
-   <!-- JS here -->
-   <script src="/static/assets/js/vendor/jquery.js"></script>
-   <script src="/static/assets/js/vendor/waypoints.js"></script>
-   <script src="/static/assets/js/bootstrap-bundle.js"></script>
-   <script src="/static/assets/js/meanmenu.js"></script>
-   <script src="/static/assets/js/swiper-bundle.js"></script>
-   <script src="/static/assets/js/splide.js"></script>
-   <script src="/static/assets/js/slick.min.js"></script>
-   <script src="/static/assets/js/nouislider.js"></script>
-   <script src="/static/assets/js/magnific-popup.js"></script>
-   <script src="/static/assets/js/nice-select.js"></script>
-   <script src="/static/assets/js/wow.js"></script>
-   <script src="/static/assets/js/datepicker.js"></script>
-   <script src="/static/assets/js/isotope-pkgd.js"></script>
-   <script src="/static/assets/js/imagesloaded-pkgd.js"></script>
-   <script src="/static/assets/js/jquery.appear.js"></script>
-   <script src="/static/assets/js/jquery.knob.js"></script>
-   <script src="/static/assets/js/circularProgressBar.min.js"></script>
-   <script src="/static/assets/js/purecounter.js"></script>
-   <script src="/static/assets/js/ajax-form.js"></script>
-   <script src="/static/assets/js/main.js"></script>
-</body>
+      <!-- JS here -->
+      <script src="/static/assets/js/vendor/jquery.js"></script>
+      <script src="/static/assets/js/vendor/waypoints.js"></script>
+      <script src="/static/assets/js/bootstrap-bundle.js"></script>
+      <script src="/static/assets/js/meanmenu.js"></script>
+      <script src="/static/assets/js/swiper-bundle.js"></script>
+      <script src="/static/assets/js/splide.js"></script>
+      <script src="/static/assets/js/slick.min.js"></script>
+      <script src="/static/assets/js/nouislider.js"></script>
+      <script src="/static/assets/js/magnific-popup.js"></script>
+      <script src="/static/assets/js/nice-select.js"></script>
+      <script src="/static/assets/js/wow.js"></script>
+      <script src="/static/assets/js/datepicker.js"></script>
+      <script src="/static/assets/js/isotope-pkgd.js"></script>
+      <script src="/static/assets/js/imagesloaded-pkgd.js"></script>
+      <script src="/static/assets/js/jquery.appear.js"></script>
+      <script src="/static/assets/js/jquery.knob.js"></script>
+      <script src="/static/assets/js/circularProgressBar.min.js"></script>
+      <script src="/static/assets/js/purecounter.js"></script>
+      <script src="/static/assets/js/ajax-form.js"></script>
+      <script src="/static/assets/js/main.js"></script>
+   </body>
 </html>
 
