--- a/templates/destination.html
+++ b/templates/destination.html
@@ -32,28 +32,33 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
       <![endif]-->
 
-
       <!-- pre loader area start -->
-      <div id="loading">
-         <div id="loading-center">
-            <div id="loading-center-absolute">
-               <!-- loading content here -->
+         <div id="loading">
+            <div id="loading-center">
+               <div id="loading-center-absolute">
+                  <div class="tp-loading-content text-center">
+                     <div class="loading-infinity">
+                        <div><span></span></div>
+                        <div> <span></span></div>
+                        <div> <span></span></div>
+                     </div>
+                  </div>
+               </div>
             </div>
          </div>
-      </div>
       <!-- pre loader area end -->
 
       <!-- back to top start -->
-      <div class="back-to-top-wrapper">
-         <button id="back_to_top" type="button" class="back-to-top-btn">
-            <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-               <path d="M11 6L6 1L1 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>               
-         </button>
-      </div>
+         <div class="back-to-top-wrapper">
+            <button id="back_to_top" type="button" class="back-to-top-btn">
+               <svg width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M11 6L6 1L1 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+               </svg>
+            </button>
+         </div>
       <!-- back to top end -->
       
-         <!-- header area start -->
+      <!-- header area start -->
          <header class="tp-header-area p-relative tp-header-height">
             <div class="tp-header-top tp-header-space d-none d-lg-block">
                <div class="container-fluid">
@@ -113,6 +118,7 @@
                                        <li> 
                                           <a href="/about">About</a>
                                        </li>
+                                       {% if username != "admin" %}
                                        <li>
                                           <a href="/food">Food</a>
                                        </li>
@@ -139,7 +145,10 @@
                                        </ul>
                                        </li>
                                        <li> <a href="/contact">Contact</a></li>
-                                       
+                                       {% else %}
+                                       <li> <a href="/food_admin">Food</a></li>
+                                       <li> <a href="/member">Member</a></li>
+                                       {% endif %}
                                     </ul>
                                  </nav>
                               </div>
