--- a/templates/index.html
+++ b/templates/index.html
@@ -118,6 +118,7 @@
                                        <li> 
                                           <a href="/about">About</a>
                                        </li>
+                                       {% if username != "admin" %}
                                        <li>
                                           <a href="/food">Food</a>
                                        </li>
@@ -144,7 +145,10 @@
                                        </ul>
                                        </li>
                                        <li> <a href="/contact">Contact</a></li>
-                                       
+                                       {% else %}
+                                       <li> <a href="/food_admin">Food</a></li>
+                                       <li> <a href="/member">Member</a></li>
+                                       {% endif %}
                                     </ul>
                                  </nav>
                               </div>
@@ -268,13 +272,13 @@
                                           <span class="tp-hero__title-pre">
                                              Ready to serve you
                                           </span>
-                                          <h3 class="tp-hero__title">Indonesia Tourism <br> Destination & Culture</h3>
+                                          <h3 class="tp-hero__title">Indonesia Tourism <br> Food & Culture</h3>
                                        </div>
-                                       <p>You can find the destination and culture of <br> Indonesian all at once in here</p>
+                                       <p>You can find the food and culture of <br> Indonesian all at once in here</p>
                                        <div class="row">
                                           <div class="col-12 col-md-8">
                                              <ul class="tp-hero-list">
-                                                <li><i class="fa-light fa-circle-check"></i> Indonesian Place</li>
+                                                <li><i class="fa-light fa-circle-check"></i> Indonesian Food</li>
                                                 <li><i class="fa-light fa-circle-check"></i> Indonesian Culture</li>
                                                 <li><i class="fa-light fa-circle-check"></i> Indonesian Statistics</li>
                                                 
@@ -310,13 +314,13 @@
                                           <span class="tp-hero__title-pre">
                                              Ready to serve you
                                           </span>
-                                          <h3 class="tp-hero__title">Indonesia Tourism <br> Destination & Culture</h3>
+                                          <h3 class="tp-hero__title">Indonesia Tourism <br> Food & Culture</h3>
                                        </div>
-                                       <p>You can find the destination and culture of <br> Indonesian all at once in here</p>
+                                       <p>You can find the food and culture of <br> Indonesian all at once in here</p>
                                        <div class="row">
                                           <div class="col-8">
                                           <ul class="tp-hero-list">
-                                             <li><i class="fa-light fa-circle-check"></i> Indonesian Place</li>
+                                             <li><i class="fa-light fa-circle-check"></i> Indonesian Food</li>
                                              <li><i class="fa-light fa-circle-check"></i> Indonesian Culture</li>
                                              <li><i class="fa-light fa-circle-check"></i> Indonesian Statistics</li>
                                           </ul>
@@ -351,13 +355,13 @@
                                           <span class="tp-hero__title-pre">
                                              Ready to serve you
                                           </span>
-                                          <h3 class="tp-hero__title">Indonesia Tourism <br> Destination & Culture</h3>
+                                          <h3 class="tp-hero__title">Indonesia Tourism <br> Food & Culture</h3>
                                        </div>
-                                       <p>You can find the destination and culture <br> Indonesian all at once in here</p>
+                                       <p>You can find the food and culture <br> Indonesian all at once in here</p>
                                        <div class="row">
                                           <div class="col-8">
                                           <ul class="tp-hero-list">
-                                             <li><i class="fa-light fa-circle-check"></i> Indonesian Place</li>
+                                             <li><i class="fa-light fa-circle-check"></i> Indonesian Food</li>
                                              <li><i class="fa-light fa-circle-check"></i> Indonesian Culture</li>
                                              <li><i class="fa-light fa-circle-check"></i> Indonesian Statistics</li>
                                           </ul>
@@ -446,11 +450,11 @@
                         <img src="/static/assets/img/shop/food.jpg" alt=""> 
                      </div>
                      <div class="tp-features-item-content">
-                        <h4 class="tp-features-item-title"><a href="/destination/bali/bali">Indonesian Place</a></h4>
+                        <h4 class="tp-features-item-title"><a href="/food">Indonesian Food</a></h4>
                         <p>Indonesian Food: various types of Indonesian traditional food</p>
                      </div>
                      <div class="tp-btn-effect">
-                        <a class="feature-btn" href="/destination/bali/bali"><i class="fa-regular fa-arrow-up-right"></i></a>
+                        <a class="feature-btn" href="/food"><i class="fa-regular fa-arrow-up-right"></i></a>
                      </div>
                   </div>
                </div>
