--- a/templates/food_admin.html
+++ b/templates/food_admin.html
@@ -285,8 +285,8 @@
                         <div class="tp-project-details-list">
                             <ul>
                                 {% for i, j, k in zip(length, data, food) %}
-                               <li><span>{{i}}</span> {{j}} : {{k}} <span></span><span></span><span></span><span></span><span></span> 
-                                 <a href="/button_food/{{j}}"><i class="fa fa-times"></i></a>
+                               <li><span>{{i}}</span> {{j}} : {{k}} <span></span><span></span><span></span><span></span><span></span>
+                                 <a href="/button_food/{{j}}"><i class="fa fa-times"></i></a></li>
                                  {% endfor %}
                             </ul>
                          </div>
