--- a/templates/member.html
+++ b/templates/member.html
@@ -285,7 +285,8 @@
                         <div class="tp-project-details-list">
                             <ul>
                                 {% for i, j in zip(length, data) %}
-                               <li><span>{{i}}</span> {{j}} </li>
+                               <li><span>{{i}}</span> {{j}} <span></span><span></span><span></span><span></span><span></span>
+                               <a href="/button_member/{{j}}"><i class="fa fa-times"></i></a></li>                                 
                                {% endfor %}
                             </ul>
                          </div>
